--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <!-- Header -->
     <div class="header">
+        <img src="/img/BizLogo.png" class="bizLogo" alt="">
         <h1>BizBrain</h1>
     </div>
 
