--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <div class="header">
         <img src="/img/BizLogo.png" class="bizLogo" alt="">
         <h1>BizBrain</h1>
+        <div class="acount">
+            <button class="signIn">Sign in</button>
+            <button class="register">Register</button>
+
+        </div>
     </div>
 
     <!-- Chat and History Container -->
@@ -45,7 +50,7 @@
 
             <!-- Chatbox Section (right column) -->
             <div class="col-md-8">
-                <h3 class="text-center">Chatbot Verde</h3>
+                <h3 class="text-center">Chatbot</h3>
 
                 <!-- Message Box -->
                 <div class="message-box mb-3" id="messageBox">
